# Navigation

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  gcovr.cfg  main.c  meson.build  poten_map.c  poten_map.h  robot_config.json  sim_config.csv  sim_config.json  vcpkg.json  vcpkg_build.Dockerfile
.ci/: collect_coverage.sh  valgrind.sh
.github/: codecov.yml
.github/workflows/: push.yml
Image Testing/: Makefile  main.c  presentation.txt
buildcfg/: base.mk  build-meta.mk  deps.mk  headers.mk
hal/: Makefile  hal.h  hal_types.h  hal_types.hpp  motor_hal.cpp  motor_hal.h  motor_hal.hpp  sensor_hal.cpp  sensor_hal.h
lib/: Makefile  meson.build
lib/catch/: Makefile  catch_main.cpp
lib/stb/: Makefile
multiprocessing/: event_executor.hpp  runnable.hpp  thread_event_executor.cpp  thread_event_executor.hpp
robot/: Makefile  fastmath.c  fastmath.h  fastmath.hpp  lidar_loop.cpp  lidar_loop.hpp  lidar_thread.cpp  lidar_thread.hpp  main.c  main.cpp  motor_loop.cpp  motor_loop.hpp  motor_thread.cpp  motor_thread.hpp  motors.cpp  motors.hpp  obstacle_map.c  obstacle_map.h  poten_map.c  poten_map.cpp  poten_map.h  poten_map.hpp  potential_map.cpp  potential_map.hpp  robot_loop.cpp  robot_loop.hpp  robot_thread.cpp  robot_thread.hpp  speed_controller.cpp  speed_controller.hpp  types.hpp
sim/: Makefile  main.cpp  motion.c  motion.cpp  motion.h  obstacle_map.cpp  obstacle_map.hpp  robot.hpp  robotsim  sensor-gen.cpp  sensor-gen.hpp
spec/: sim.md
src/: meson.build  robot_main.cpp  sim_main.cpp
src/common/: common.hpp  coordinate_system.cpp  coordinate_system.hpp  coordinates.cpp  coordinates.hpp  differential_odometry.cpp  differential_odometry.hpp  meson.build  periodic.cpp  periodic.hpp  vector2.cpp  vector2.hpp
src/comms/: comms.cpp  comms.hpp  development.grpc.pb.cc  development.grpc.pb.h  development.pb.cc  development.pb.h  meson.build  routing.grpc.pb.cc  routing.grpc.pb.h  routing.pb.cc  routing.pb.h  routing.proto  spec.proto
src/events/: error_event.cpp  error_event.hpp  error_reporting.cpp  error_reporting.hpp  event.hpp  event_queue.cpp  event_queue.hpp  meson.build  route_control.cpp  route_control.hpp  route_update_event.cpp  route_update_event.hpp
src/hal/: gps.hpp  gyroscope.hpp  hal.hpp  hal_provider.hpp  infrared_sensor.hpp  lidar_scanner.hpp  meson.build  motor.hpp  motor_hal.cpp  motor_hal.hpp  positioning.hpp  sensor_hal.hpp  ultrasonic_sensor.hpp
src/hal/impl/: TG30_lidar.cpp  TG30_lidar.hpp  hal_provider_impl.cpp  hal_provider_impl.hpp  meson.build
src/hal/robot_impl/: TG30_lidar.cpp  TG30_lidar.hpp  hal_provider_impl.cpp  hal_provider_impl.hpp  meson.build
src/hal/sim_impl/: beam_model.cpp  distance_sensor_model.cpp  distance_sensor_model.hpp  hal_provider_sim_impl.cpp  hal_provider_sim_impl.hpp  infrared_sensor_sim_impl.cpp  infrared_sensor_sim_impl.hpp  lidar_scanner_sim_impl.cpp  lidar_scanner_sim_impl.hpp  meson.build  motor_sim_impl.cpp  motor_sim_impl.hpp  positioning_sim_impl.cpp  positioning_sim_impl.hpp  ultrasonic_sensor_sim_impl.cpp  ultrasonic_sensor_sim_impl.hpp
src/robot/: config.cpp  config.hpp  drivetrain.cpp  drivetrain.hpp  loop.cpp  loop.hpp  main.cpp  meson.build  potential_map.cpp  potential_map.hpp  robot.cpp  robot.hpp  speed_controller.cpp  speed_controller.hpp  types.hpp  util.hpp
src/robot/loops/: lidar_loop.hpp  loop.cpp  loop.hpp  robot_loop.cpp  robot_loop.hpp
src/sim/: config.cpp  config.hpp  main.cpp  meson.build  motion.hpp  obstacle_map.cpp  obstacle_map.hpp  physics_sim.cpp  physics_sim.hpp  polygon.cpp  polygon.hpp  recording.cpp  recording.hpp  robot.hpp  sensor-gen.cpp  sensor-gen.hpp  simulation.cpp  simulation.hpp
src/sim/sim_hal_impl/: beam_model.cpp  beam_model.hpp  distance_sensor_model.cpp  distance_sensor_model.hpp  gps_sim_impl.cpp  gps_sim_impl.hpp  gyroscope_sim_impl.cpp  gyroscope_sim_impl.hpp  hal_provider_sim_impl.cpp  hal_provider_sim_impl.hpp  infrared_sensor_sim_impl.cpp  infrared_sensor_sim_impl.hpp  lidar_scanner_sim_impl.cpp  lidar_scanner_sim_impl.hpp  meson.build  motor_sim_impl.cpp  motor_sim_impl.hpp  positioning_sim_impl.cpp  positioning_sim_impl.hpp  ultrasonic_sensor_sim_impl.cpp  ultrasonic_sensor_sim_impl.hpp
src/sim/visualization/: base_style.css  drawer.html  index.html  styles.css  visualization.js
src/sim/visualization/graphics/: components.js  scene.js
src/sim/visualization/pages/config_creator/: drawer.js  index.html
src/sim/visualization/pages/config_editor/: editor.js  index.html  style.css
src/sim/visualization/pages/replay/: index.html  replay.js  style.css
src/sim/visualization/scripts/: drawer.js  visualization.js
subprojects/: asio.wrap
subprojects/catch2/: meson.build
subprojects/packagefiles/asio-1.20.0/: meson.build
subprojects/packagefiles/asio-1.21.0/: meson.build
subprojects/packagefiles/asio-1.22.1/: meson.build
subprojects/stb/: meson.build  stb_image.c
test/: meson.build
test/common/: meson.build  test_coordinate_system.cpp  test_differential_odometry.cpp  test_vector2.cpp
test/sim/: main.cpp  meson.build  test_obstacle_map.cpp  test_polygon.cpp  test_sensor_gen.cpp
tests/: Makefile
tests/common/: Makefile
tests/sim/: Makefile  test_obstacle_map.cpp  test_sensor_gen.cpp
