sim_hal_impl_includes = include_directories('.')
sim_hal_impl_src = files([
    'beam_model.cpp',
    'distance_sensor_model.cpp',
    'hal_provider_sim_impl.cpp',
    'infrared_sensor_sim_impl.cpp',
    'lidar_scanner_sim_impl.cpp',
    'motor_sim_impl.cpp',
    'positioning_sim_impl.cpp',
    'ultrasonic_sensor_sim_impl.cpp',
])
